# Youtube-2-Text

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_deepgram.py  test_voxtral.py  test_youtube_options.py
agents/: __init__.py  languages.py  prompts.yaml  summarize_agent.py  translate_agent.py
alembic/: env.py
alembic/versions/: 4c88ea24c849_create_initial_tables.py  a1b2c3d4e5f6_add_usage_columns_to_users.py  b2c3d4e5f6g7_add_waitlist.py  d4e5f6g7h8i9_add_subscriptions.py
database/: __init__.py  connection.py  orm.py
dependencies/: auth.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActionBar.tsx  ErrorModal.tsx  FeedbackCard.tsx  Footer.tsx  Header.tsx  Hero.tsx  OutputCard.tsx  PremiumGateModal.tsx  PremiumUpsell.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
routes/: __init__.py  auth.py  feedback_router.py  language_detect.py  payments.py  pdf_request.py  summary_router.py  translate_router.py  utils.py  video_transcript.py  video_transcript_premium.py  youtube_proxy.py
scripts/: smoke_openrouter.py
